Fix bug in UserPatch