@@ -1,5 +1,6 @@
 package io.github.kkusylabs.useradmin.client.core.api.user;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
@@ -108,6 +109,6 @@ public class UserPatch {
 	 * @return immutable patch payload map
 	 */
 	public Map<String, Object> asMap() {
-		return Map.copyOf(values);
+		return Collections.unmodifiableMap(new LinkedHashMap<>(values));
 	}
 }
